--- a/NeoAPI_Test.cbp
+++ b/NeoAPI_Test.cbp
@@ -14,9 +14,12 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
+					<Add directory="lib" />
 				</Compiler>
 				<Linker>
+					<Add library="lib/libneoapi_cpp.so.1.3.1" />
 					<Add directory="include" />
+					<Add directory="lib" />
 					<LinkerExe value="CppCompiler" />
 				</Linker>
 			</Target>
