--- a/tests/CameraViewPOC/CameraViewPOC.cbp
+++ b/tests/CameraViewPOC/CameraViewPOC.cbp
@@ -17,16 +17,24 @@
 					<Add directory="/home/kukavision/KukaVision/repo/KukaVision/CameraViewPOC/include" />
 					<Add directory="/home/kukavision/KukaVision/repo/KukaVision/CameraViewPOC/tests/CameraViewPOC/" />
 					<Add directory="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/include" />
+					<Add directory="include" />
+					<Add directory="/usr/include/opencv4" />
+					<Add directory="/usr/lib/x86_64-linux-gnu/" />
 				</Compiler>
 				<Linker>
 					<Add library="../../lib/libneoapi_cpp.so.1.3.1" />
 					<Add library="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/lib/libQt5Core.so" />
 					<Add library="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/lib/libQt5Widgets.so" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libopencv_core.so" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libopencv_highgui.so" />
+					<Add library="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/lib/libQt5Gui.so" />
 					<Add directory="/home/kukavision/KukaVision/repo/KukaVision/CameraViewPOC/tests/CameraViewPOC/" />
 					<Add directory="/home/kukavision/KukaVision/repo/KukaVision/CameraViewPOC/include" />
 					<Add directory="/home/kukavision/KukaVision/repo/KukaVision/CameraViewPOC/lib" />
 					<Add directory="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/lib" />
 					<Add directory="/home/kukavision/Qt5.14.2/5.14.2/gcc_64/include" />
+					<Add directory="/usr/include/opencv4" />
+					<Add directory="/usr/lib/x86_64-linux-gnu/" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -36,6 +44,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -45,7 +54,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../../include/CameraStream.h" />
 		<Unit filename="../../include/FindCameraDialog.h" />
+		<Unit filename="../../src/CameraStream.cpp" />
+		<Unit filename="../../src/FindCameraDialog.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="ui_mainwindow.h" />
 		<Extensions />
